--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "express-router": "^0.0.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "handlebars": "^4.7.8",
     "mongoose": "^8.8.3",
     "passport": "^0.7.0",
